[package]
name = "neon-prebuild-example"
version = "0.0.1"
description = "Example Neon library project with prebuilds for common architectures."
authors = ["Dave Herman <david.herman@gmail.com>"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
